--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
         </div>
     </div>
 
+    <script src="js/config.js"  type="module"></script>
     <script src="js/clock.js"></script>
     <script src="js/searchField.js"></script>
-    <script src="js/config.js"></script>
-    <script src="js/searchlogic.js"></script>
+    <script src="js/searchlogic.js" type="module"></script>
+    <script src="js/commands.js" type="module"></script>
 </body>
 </html>
