--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
         <div id="clock"></div>
         <div id="command-field">
             <form id="searchForm" spellcheck="false" autocomplete="off" autocapitalize="false" class="fillout">
-                <input type="text" name="search" id="searchText" class="fillout">
+                <input type="text" name="search" id="searchText">
             </form>
+            <input type="text" readonly id="searchHint">
         </div>
     </div>
 
     <script src="js/config.js"  type="module"></script>
     <script src="js/clock.js"></script>
-    <script src="js/searchField.js"></script>
+    <script src="js/searchField.js" type="module"></script>
     <script src="js/searchlogic.js" type="module"></script>
     <script src="js/commands.js" type="module"></script>
 </body>
