--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script>
         Sentry.init({ 
             dsn: 'https://a3587e3b77964656bdf5942aaf34f1f6@sentry.streimel.com/5',
-            release: 'newtabs@' + ' $CI_COMMIT_TAG '
+            release: 'newtabs@' + '${CI_COMMIT_TAG}' // In the ci process this will be set to the App version
             });
     </script>
     <script src="js/config.js"  type="module"></script>
