Added the Chrome extension shell

--- a/chrome_extension/site/index.html
+++ b/chrome_extension/site/index.html
@@ -17,14 +17,14 @@
         </div>
     </div>
 
-    <script src="https://browser.sentry-cdn.com/5.12.1/bundle.min.js" integrity="sha384-y+an4eARFKvjzOivf/Z7JtMJhaN6b+lLQ5oFbBbUwZNNVir39cYtkjW1r6Xjbxg3" crossorigin="anonymous">
+    <!-- <script src="https://browser.sentry-cdn.com/5.12.1/bundle.min.js" integrity="sha384-y+an4eARFKvjzOivf/Z7JtMJhaN6b+lLQ5oFbBbUwZNNVir39cYtkjW1r6Xjbxg3" crossorigin="anonymous">
     </script>
     <script>
         Sentry.init({ 
             dsn: 'https://a3587e3b77964656bdf5942aaf34f1f6@sentry.streimel.com/5',
             release: 'newtabs@${CI_COMMIT_TAG}' // In the ci process this will be set to the App version
             });
-    </script>
+    </script> -->
     <script src="js/config.js"  type="module"></script>
     <script src="js/clock.js"></script>
     <script src="js/searchField.js" type="module"></script>
