--- a/chrome_extension/site/index.html
+++ b/chrome_extension/site/index.html
@@ -29,6 +29,7 @@
     <script src="js/clock.js"></script>
     <script src="js/searchField.js" type="module"></script>
     <script src="js/searchlogic.js" type="module"></script>
+    <script src="js/utils.js" type="module"></script>
     <script src="js/commands.js" type="module"></script>
 </body>
 </html>
