added support for background images and fixed a bug in the sc add command

--- a/chrome_extension/site/index.html
+++ b/chrome_extension/site/index.html
@@ -25,6 +25,7 @@
             release: 'newtabs@${CI_COMMIT_TAG}' // In the ci process this will be set to the App version
             });
     </script> -->
+    <script src="js/getBackground.js" type="module"></script>
     <script src="js/config.js"  type="module"></script>
     <script src="js/clock.js"></script>
     <script src="js/searchField.js" type="module"></script>
