Fixed Bug NTD-7

--- a/chrome_extension/site/index.html
+++ b/chrome_extension/site/index.html
@@ -32,5 +32,6 @@
     <script src="js/searchlogic.js" type="module"></script>
     <script src="js/utils.js" type="module"></script>
     <script src="js/commands.js" type="module"></script>
+    <script src="js/getBackground.js" type="module"></script>
 </body>
 </html>
