Added helper functions for info Toast and Error Toast

--- a/chrome_extension/site/index.html
+++ b/chrome_extension/site/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Tabs</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/com.css">
 </head>
 <body>
     <div class="center-screen center-container">
@@ -26,5 +27,6 @@
     <script src="js/utils.js" type="module"></script>
     <script src="js/commands.js" type="module"></script>
     <script src="js/getBackground.js" type="module"></script>
+    <script src="js/com.js" type="module"></script>
 </body>
 </html>
