--- a/chrome_extension/site/index.html
+++ b/chrome_extension/site/index.html
@@ -18,6 +18,16 @@
         </div>
     </div>
 
+    <svg class="shortcut-category-close" xmlns='http://www.w3.org/2000/svg' width='512' height='512' viewBox='0 0 512 512'>
+        <title>ionicons-v5-m</title>
+        <path d='M448,256c0-106-86-192-192-192S64,150,64,256s86,192,192,192S448,362,448,256Z' style='fill:none;stroke:#616161e7;stroke-miterlimit:10;stroke-width:32px'/>
+        <line x1='320' y1='320' x2='192' y2='192' style='fill:none;stroke:#616161e7;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px'/>
+        <line x1='192' y1='320' x2='320' y2='192' style='fill:none;stroke:#616161e7;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px'/>
+    </svg>
+
+    <div class="shortcut-category-container">
+    </div>
+
     <script src="https://browser.sentry-cdn.com/5.12.1/bundle.min.js" integrity="sha384-y+an4eARFKvjzOivf/Z7JtMJhaN6b+lLQ5oFbBbUwZNNVir39cYtkjW1r6Xjbxg3" crossorigin="anonymous">
     </script>
     <script src="js/config.js"  type="module"></script>
@@ -28,5 +38,6 @@
     <script src="js/commands.js" type="module"></script>
     <script src="js/getBackground.js" type="module"></script>
     <script src="js/com.js" type="module"></script>
+    <script src="js/shortcutCategories.js" type="module"></script>
 </body>
 </html>
