--- a/chrome_extension/site/index.html
+++ b/chrome_extension/site/index.html
@@ -15,8 +15,18 @@
                 <input type="text" name="search" id="searchText">
             </form>
             <input type="text" readonly id="searchHint">
+            <div class="arrow-to-dest">
+                <svg xmlns='http://www.w3.org/2000/svg' class="arrow" width='512' height='512' viewBox='0 0 512 512'>
+                    <title>ionicons-v5-c</title>
+                    <polyline points='400 352 464 288 400 224' style='fill:none;stroke:#FFF;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px'/>
+                    <path d='M448,288H154C95.24,288,48,238.67,48,180V160' style='fill:none;stroke:#FFF;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px'/>
+                </svg>
+                <div class="dest-text">text hier</div>
+            </div>
         </div>
     </div>
+
+    
 
     <svg class="shortcut-category-close" xmlns='http://www.w3.org/2000/svg' width='512' height='512' viewBox='0 0 512 512'>
         <title>ionicons-v5-m</title>
