--- a/chrome_extension/site/index.html
+++ b/chrome_extension/site/index.html
@@ -1,52 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>New Tabs</title>
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/com.css">
-</head>
-<body>
-    <div class="center-screen center-container">
-        <div id="clock"></div>
-        <div id="command-field">
-            <form id="searchForm" spellcheck="false" autocomplete="off" autocapitalize="false" class="fillout">
-                <input type="text" name="search" id="searchText">
-            </form>
-            <input type="text" readonly id="searchHint">
-            <div class="arrow-to-dest">
-                <svg xmlns='http://www.w3.org/2000/svg' class="arrow" width='512' height='512' viewBox='0 0 512 512'>
-                    <title>ionicons-v5-c</title>
-                    <polyline points='400 352 464 288 400 224' style='fill:none;stroke:#FFF;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px'/>
-                    <path d='M448,288H154C95.24,288,48,238.67,48,180V160' style='fill:none;stroke:#FFF;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px'/>
-                </svg>
-                <div class="dest-text">text hier</div>
-            </div>
-        </div>
-    </div>
-
+    <script type="module" crossorigin src="/assets/index.c5a85cbe.js"></script>
+    <link rel="stylesheet" href="/assets/index.d1e2d967.css">
+  </head>
+  <body>
+    <div id="app"></div>
     
-
-    <svg class="shortcut-category-close" xmlns='http://www.w3.org/2000/svg' width='512' height='512' viewBox='0 0 512 512'>
-        <title>ionicons-v5-m</title>
-        <path d='M448,256c0-106-86-192-192-192S64,150,64,256s86,192,192,192S448,362,448,256Z' style='fill:none;stroke:#616161e7;stroke-miterlimit:10;stroke-width:32px'/>
-        <line x1='320' y1='320' x2='192' y2='192' style='fill:none;stroke:#616161e7;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px'/>
-        <line x1='192' y1='320' x2='320' y2='192' style='fill:none;stroke:#616161e7;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px'/>
-    </svg>
-
-    <div class="shortcut-category-container">
-    </div>
-
-    </script>
-    <script src="js/config.js"  type="module"></script>
-    <script src="js/clock.js"></script>
-    <script src="js/searchField.js" type="module"></script>
-    <script src="js/searchlogic.js" type="module"></script>
-    <script src="js/utils.js" type="module"></script>
-    <script src="js/commands.js" type="module"></script>
-    <script src="js/getBackground.js" type="module"></script>
-    <script src="js/com.js" type="module"></script>
-    <script src="js/shortcutCategories.js" type="module"></script>
-</body>
+  </body>
 </html>
